--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -42,6 +42,7 @@
     <string name="settings_delete_duplicates_start">Start to find duplicates…</string>
     <string name="find_duplicates_result_content">Detected %1$d duplicate images! Tap to delete.</string>
     <string name="find_duplicates_not_detected_content">No duplicate images detected.</string>
+    <string name="delete_duplicates_done">Deleted duplicated images!</string>
 
     <string name="login_vault_title">Vault Album</string>
     <string name="login_vault_subtitle">Please enter your passcode.</string>
